Fix Style Of Contact Links On Small Screens

--- a/css/style-768px.css
+++ b/css/style-768px.css
@@ -98,6 +98,10 @@ nav p {
 	border: 1px green dotted;
 }
 
+#contact-links {
+	font-size: 16pt;
+}
+
 /* UP */
 
 #up {
